# mcp-server

./: README.md  pyproject.toml
mcp_server/: __init__.py  registry.py  server.py
mcp_server/tools/: __init__.py
mcp_server/tools/github/: client.py  tools.py
mcp_server/tools/jira/: client.py  tools.py
mcp_server/tools/mongodb/: client.py  tools.py
mcp_server/tools/oracle/: client.py  tools.py
mcp_server/tools/rest_api/: tools.py
