[project]
name = "mcp-server-hub"
version = "1.0.0"
description = "MCP Server Hub — GitHub, Jira, REST API, Oracle, MongoDB"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "PyGithub>=2.5.0",
    "httpx>=0.27.0",
    "jira>=3.8.0",
    "oracledb>=2.0.0",
    "pymongo>=4.0.0",
]

[project.scripts]
mcp-server-hub = "mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
